{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 75,
  "lineage": "7ba90aec-09a8-5d0a-ca04-29b8a1dab2bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:386123244177:instance/i-06b186f1f855f0191",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b186f1f855f0191",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-084391192968cfdaa",
            "private_dns": "ip-192-168-0-92.ap-south-1.compute.internal",
            "private_ip": "192.168.0.92",
            "public_dns": "ec2-13-235-135-40.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.135.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bbe5d879d72ce631",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021ab0d5746014766",
            "tags": {
              "Name": "WordPress-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06a5d580688d6f598"
            ]
          },
          "dependencies": [
            "aws_key_pair.MyKey",
            "aws_security_group.group1",
            "aws_subnet.public_sub",
            "aws_vpc.vpc1",
            "tls_private_key.privateKey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:386123244177:instance/i-0a5ceeb0e42efad52",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5ceeb0e42efad52",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "My-Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03ad03d60763a78b7",
            "private_dns": "ip-192-168-1-196.ap-south-1.compute.internal",
            "private_ip": "192.168.1.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05e56d32e02beb172",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03ad563964868d270",
            "tags": {
              "Name": "Mysql-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f5a96a1049bb075d"
            ]
          },
          "dependencies": [
            "aws_key_pair.MyKey",
            "aws_security_group.group1",
            "aws_security_group.newgrp2",
            "aws_subnet.private_sub",
            "aws_vpc.vpc1",
            "tls_private_key.privateKey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:internet-gateway/igw-0f37c14bb060967a2",
            "id": "igw-0f37c14bb060967a2",
            "owner_id": "386123244177",
            "tags": {
              "Name": "task-3-internet-gateway"
            },
            "vpc_id": "vpc-0eeaec37d2569275b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ff3c2d6393b725be",
            "owner_id": "386123244177",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f37c14bb060967a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroute"
            },
            "vpc_id": "vpc-0eeaec37d2569275b"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_ass",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f66f255933afa21f",
            "route_table_id": "rtb-0ff3c2d6393b725be",
            "subnet_id": "subnet-021ab0d5746014766"
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_route_table.route",
            "aws_subnet.public_sub",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "group1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:security-group/sg-06a5d580688d6f598",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a5d580688d6f598",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security-Group-1",
            "name_prefix": "",
            "owner_id": "386123244177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security-Group-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eeaec37d2569275b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "newgrp2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:security-group/sg-0f5a96a1049bb075d",
            "description": "Allow Mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5a96a1049bb075d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06a5d580688d6f598"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Security-Group-2",
            "name_prefix": "",
            "owner_id": "386123244177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security-Group-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eeaec37d2569275b"
          },
          "dependencies": [
            "aws_security_group.group1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:subnet/subnet-03ad563964868d270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-03ad563964868d270",
            "map_public_ip_on_launch": false,
            "owner_id": "386123244177",
            "tags": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0eeaec37d2569275b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:subnet/subnet-021ab0d5746014766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-021ab0d5746014766",
            "map_public_ip_on_launch": true,
            "owner_id": "386123244177",
            "tags": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0eeaec37d2569275b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:386123244177:vpc/vpc-0eeaec37d2569275b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0982ee9c72dd04c18",
            "default_route_table_id": "rtb-0f1107e6c781d5c2f",
            "default_security_group_id": "sg-010983db4b82029c4",
            "dhcp_options_id": "dopt-a35ea6c8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eeaec37d2569275b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f1107e6c781d5c2f",
            "owner_id": "386123244177",
            "tags": {
              "Name": "VPC-1"
            }
          }
        }
      ]
    }
  ]
}